feat: modal changes and updated the document and css

--- a/addons/mi_website_ext/static/src/css/modal.css
+++ b/addons/mi_website_ext/static/src/css/modal.css
@@ -8,6 +8,13 @@
   box-shadow: 0px 4px 5.2px 0px rgba(63, 64, 123, 0.06);
 }
 
+.modal-header {
+  display: flex;
+  align-items: flex-start;
+  padding: 0;
+  flex-direction: column;
+}
+
 .modal-title {
   color: #323030;
   font-family: "Rubik";
