[FIX] event: set communication status to cancelled on event cancellation
The condition for setting mail_state to cancelled was wrong, as 'mail_done' is
True when there are no registrations or all mails are sent. So, the cancelled
icon is still not visible when we cancel an event.

This commit updates the mail_state value to cancelled immediately when an event
is cancelled.

Ref: https://github.com/odoo/odoo/pull/198141

Task-5063079

--- a/addons/event/views/event_event_views.xml
+++ b/addons/event/views/event_event_views.xml
@@ -104,7 +104,7 @@
                                     <field name="interval_type"/>
                                     <field name="scheduled_date" groups="base.group_no_one"/>
                                     <field name="mail_count_done"/>
-                                    <field name="mail_state" widget="event_icon_selection" string=" " nolabel="1"
+                                    <field name="mail_state" widget="event_icon_selection" string="Scheduler"
                                         options="{
                                             'error': 'fa fa-exclamation-triangle',
                                             'sent': 'fa fa-check',
