[IMP] web, html_builder: fix focus edit color combination button
Fix "edit color combination button" size shifting on focus by keeping a
transparent border when not focused. This ensures the button width stays
consistent and avoids a slight layout jump when the button is selected.

closes odoo/odoo#225535

Signed-off-by: Serge Bayet (seba) <seba@odoo.com>

--- a/addons/html_builder/static/src/core/building_blocks/builder_colorpicker.scss
+++ b/addons/html_builder/static/src/core/building_blocks/builder_colorpicker.scss
@@ -91,6 +91,10 @@
         &:hover {
             color: $o-we-fg-lighter;
         }
+
+        &:not(:focus-visible) {
+            border: 1px solid transparent; // keep size stable on focus
+        }
     }
 
     // Gradients
