[IMP] account, *: group imported invoice lines by tax
modules: account, account_edi_ubl_cii, l10n_account_edi_ubl_cii_tests,
l10n_dk_oioubl, purchase_edi_ubl_bis_3

Most of the time, an accountant that imports a bill don't need to see
every line. What's useful to him is to see what amount is linked to what
tax.

task-5047859

--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -250,6 +250,9 @@
                                     </div>
                                 </div>
                             </setting>
+                            <setting company_dependent="1" help="Enable to get only one invoice line per tax">
+                                <field name="extract_single_line_per_tax"/>
+                            </setting>
                         </block>
 
                         <t groups="account.group_account_user">
