[FIX] website_sale_stock_wishlist: fix layout issue
Prior to this commit, the out-of-stock badge on the wishlist page was
not styled, making it look inconsistent.

With this commit, we remove the extra information:

The Out of stock message

The Get notified... message

These are replaced by a styled out-of-stock badge, consistent with the
one used on the shop page.

task-5039273

closes odoo/odoo#225295

Signed-off-by: Valentin Chevalier <vcr@odoo.com>

--- a/addons/website_sale/views/product_tile_templates.xml
+++ b/addons/website_sale/views/product_tile_templates.xml
@@ -191,6 +191,7 @@
                             </t>
                         </div>
                     </t>
+                    <t t-if="product_extra_information" t-out="product_extra_information"/>
                 </div>
             </div>
             <div class="o_wsale_product_sub justify-content-between gap-2">
