--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -1617,7 +1617,7 @@
                             <p>We are a team of passionate people whose goal is to improve everyone's life through disruptive products. We build great products to solve your business problems.
                             <br/><br/>Our products are designed for small to medium size companies willing to optimize their performance.</p>
                         </div>
-                        <div id="connect" class="col-lg-4 offset-lg-1 pt24 pb24">
+                        <div class="col-lg-4 offset-lg-1 pt24 pb24">
                             <h5 class="mb-3">Connect with us</h5>
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-comment fa-fw me-2"/><span><a href="/contactus">Contact us</a></span></li>
