--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -1082,7 +1082,7 @@
                             <div class="s_hr pt16 pb16" data-snippet="s_hr" data-name="Separator">
                                 <hr class="w-100 mx-auto" style="border-top-color: var(--400)  !important;"/>
                             </div>
-                            <div id="connect">
+                            <div>
                                 <ul class="list-unstyled text-nowrap">
                                     <li><i class="fa fa-comment fa-fw me-2"></i><span><a href="/contactus">Contact us</a></span></li>
                                     <li><i class="fa fa-envelope fa-fw me-2"></i><span><a href="mailto:info@yourcompany.example.com">info@yourcompany.example.com</a></span></li>
