[IMP] hr: Employees can have multiple bank accounts
Changing `bank_account_id` m2o field into `bank_account_ids` m2m field,
within `hr.employee`, allowing employees to associate with than one bank account.

New wizard:
- A wizard to let HR users distribute the salary of an employee over their bank accounts and allocate either a fixed amount or a percentage of the remaining to each bank account.
- HR can reorder the bank accounts within the wizard to indicate an order of priority, the top bank account will be considered as the primary bank account.

New widget:
- Overriding the many2many widget to showing the amount allocated to each bank account.

Expenses receipts and payments will use the primary bank account of the employee.

Task-4908556

closes odoo/odoo#222226

Related: odoo/enterprise#91934
Related: odoo/upgrade#8272
Signed-off-by: Yannick Tivisse (yti) <yti@odoo.com>

--- a/addons/hr/views/res_users.xml
+++ b/addons/hr/views/res_users.xml
@@ -140,7 +140,7 @@
                                 <field name="private_email" string="Email" readonly="not can_edit"/>
                                 <field name="private_phone" string="Phone" class="o_force_ltr" readonly="not can_edit"/>
                                 <field name="private_lang" string="Language" readonly="not can_edit"/>
-                                <field name="employee_bank_account_id" context="{'display_partner': True}" readonly="not can_edit"/>
+                                <field name="employee_bank_account_ids" widget="many2many_tags" context="{'display_partner': True}" readonly="not can_edit"/>
                                 <label for="distance_home_work"/>
                                 <div class="o_row">
                                     <field name="distance_home_work" readonly="not can_edit" class="o_hr_narrow_field"/>
