--- a/addons/hr/static/src/scss/hr.scss
+++ b/addons/hr/static/src/scss/hr.scss
@@ -108,3 +108,7 @@
 .o_hr_version_list_view th[data-name="date_version"] {
     width: 8rem !important;
 }
+
+.button-on {
+    color: $o-success;
+}
