--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -192,8 +192,53 @@
                                     <group string="Private Contact">
                                         <field name="private_email" placeholder="e.g. myprivateemail@example.com" string="Email"/>
                                         <field name="private_phone" widget="phone" string="Phone"/>
-                                        <field name="bank_account_id" context="{'default_partner_id': work_contact_id}"
-                                               options="{'no_quick_create': True}" readonly="not id"/>
+                                        <field name="has_multiple_bank_accounts" invisible="1"/>
+                                        <field name="is_trusted_bank_account" invisible="1"/>
+                                        <field name="bank_account_ids" invisible="1"
+                                            widget="many2many_tags" options="{'color_field': 'color'}"/>
+                                        <label for="bank_account_ids"/>
+                                        <div class="d-flex align-items-start justify-content-between" invisible="not has_multiple_bank_accounts">
+                                                <field name="bank_account_ids"
+                                                        widget="many2many_tags_salary_bank"
+                                                        context="{'default_partner_id': work_contact_id}"
+                                                        options="{'color_field': 'color', 'no_quick_create': True, 'edit_tags': True}"
+                                                        readonly="not id"/>
+                                            <div class="pt-0 ms-2">
+                                                <button name="action_open_allocation_wizard"
+                                                        type="object"
+                                                        string="Salary Allocation"
+                                                        class="btn btn-link p-0 ms-auto text-nowrap"
+                                                        />
+                                            </div>
+                                        </div>
+
+                                        <div class="o-row d-flex justify-content-between gap-2 align-items-start" invisible="has_multiple_bank_accounts">
+                                            <field name="bank_account_ids"
+                                                widget="many2many_tags_salary_bank"
+                                                context="{'default_partner_id': work_contact_id}"
+                                                options="{'color_field': 'color', 'no_quick_create': True, 'edit_tags': True}"
+                                                readonly="not id"/>
+                                            <div class="d-flex align-items-start" invisible="not bank_account_ids">
+                                                <span class="d-flex w-50">
+                                                    <span invisible="is_trusted_bank_account" class="text-muted">Untrusted</span>
+                                                    <span invisible="not is_trusted_bank_account" class="text-success">Trusted</span>
+                                                </span>
+                                                <button
+                                                    title="Trust Bank Account"
+                                                    class="pt-0" 
+                                                    icon="fa-toggle-off fa-lg"  
+                                                    type="object" 
+                                                    name="action_toggle_primary_bank_account_trust" 
+                                                    invisible="is_trusted_bank_account"/>
+                                                <button 
+                                                    title="Untrust Bank Account"
+                                                    class="button-on pt-0" 
+                                                    icon="fa-toggle-on fa-lg"   
+                                                    type="object" 
+                                                    name="action_toggle_primary_bank_account_trust" 
+                                                    invisible="not is_trusted_bank_account"/>
+                                            </div>
+                                        </div>
                                     </group>
                                     <group string="Personal Information" name="hr_birth_group">
                                         <field name="legal_name"/>
