--- a/addons/purchase/views/product_views.xml
+++ b/addons/purchase/views/product_views.xml
@@ -178,6 +178,7 @@
                     <field name="seller_ids" string="Vendor"/>
                 </xpath>
                 <xpath expr="//filter[@name='goods']" position="after">
+                    <separator/>
                     <filter string="In the Order"
                             name="products_in_purchase_order"
                             domain="[('is_in_purchase_order', '=', True)]"/>
