--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -2726,6 +2726,7 @@ Sitemap: <t t-out="url_root"/>sitemap.xml
         <attribute name="t-att-data-display-description">display_description or 'true'</attribute>
         <attribute name="t-att-data-display-extra-link">display_extra_link or 'true'</attribute>
         <attribute name="t-att-data-display-detail">display_detail or 'true'</attribute>
+        <attribute name="t-att-data-display-html-content">display_html_content or 'true'</attribute>
         <attribute name="t-att-data-order-by">order_by or 'name asc'</attribute>
     </xpath>
     <xpath expr="//div[@role='search']" position="attributes">
