[FIX] hr_attendance: UX

--- a/addons/hr_attendance/views/hr_attendance_overtime_rule_views.xml
+++ b/addons/hr_attendance/views/hr_attendance_overtime_rule_views.xml
@@ -125,8 +125,7 @@
                                     <field name="sequence" widget="handle"/>
                                     <field name="name"/>
                                     <field name="base_off"/>
-                                    <field name="quantity_display"/>
-                                    <field name="timing_display"/>
+                                    <field name="information_display"/>
                                     <field name="amount_rate" widget="percentage"/>
                                 </list>
                             </field>
