[IMP] mass_mailing: refresh mass_mailing snippets
After the `mass_mailing` refactoring to use the html Builder, some snippets had
outdated appearance. This commit refreshes all of them inspired by those in
`website`.

This commit also adapt existing mailing templates so that their content is more
closely related to what is achievable with the html Builder. In the future, new
themes will be introduced.

task-4247642

Co-authored-by: Damien Abeloos <abd@odoo.com>
Co-authored-by: Thomas Josse <thjo@odoo.com>

--- a/addons/mass_mailing/static/src/iframe_assets/iframe_style.scss
+++ b/addons/mass_mailing/static/src/iframe_assets/iframe_style.scss
@@ -34,3 +34,9 @@ body {
         display: none !important;
     }
 }
+// Smaller container
+.o_container_small {
+    @include media-breakpoint-up(lg) {
+        max-width: map-get($container-max-widths, md);
+    }
+}
