--- a/addons/website_mass_mailing/views/snippets_templates.xml
+++ b/addons/website_mass_mailing/views/snippets_templates.xml
@@ -157,7 +157,7 @@ database, without the s_newsletter_list class. See fixNewsletterListClass.
 
 <template id="s_newsletter_block_form_template" groups="base.group_user">
     <section class="s_website_form" data-vcss="001" data-snippet="s_website_form" data-name="Form">
-        <div class="o_container_small">
+        <div class="container o_container_small">
             <form id="newsletter_form" action="/website/form/" method="post" enctype="multipart/form-data" class="o_mark_required"
                   data-mark="*" data-model_name="mailing.contact" data-success-mode="message" hide-change-model="true">
                 <div class="s_website_form_rows row s_col_no_bgcolor">
