--- a/addons/mass_mailing/static/src/builder/snippet_viewer/snippet_viewer.scss
+++ b/addons/mass_mailing/static/src/builder/snippet_viewer/snippet_viewer.scss
@@ -1,5 +1,7 @@
 .o_snippets_preview_row {
-    [data-snippet-id] .o_mail_snippet_general {
-        zoom: 3;
+    .o_mail_footer_links {
+        & > a:not(.btn), a.btn.btn-link {
+            padding: 0;
+        }
     }
 }
